feat: Implement ForbiddenException and enhance access control across various controllers