@@ -5,21 +5,36 @@ import com.srms.api.modules.academic.entity.ClassEnrolment;
 import com.srms.api.modules.academic.entity.SchoolClass;
 import com.srms.api.modules.academic.repository.ClassEnrolmentRepository;
 import com.srms.api.modules.academic.repository.SchoolClassRepository;
+import com.srms.api.modules.assessment.dto.GradingBandDto;
 import com.srms.api.modules.assessment.entity.Assessment;
 import com.srms.api.modules.assessment.entity.AssessmentResult;
 import com.srms.api.modules.assessment.entity.GradeWeightConfig;
+import com.srms.api.modules.assessment.entity.PublishedTermGrade;
 import com.srms.api.modules.assessment.entity.TermGrade;
 import com.srms.api.modules.assessment.repository.AssessmentRepository;
+import com.srms.api.modules.assessment.repository.PublishedTermGradeRepository;
 import com.srms.api.modules.assessment.repository.ResultRepository;
 import com.srms.api.modules.assessment.repository.TermGradeRepository;
+import com.srms.api.modules.school.entity.School;
+import com.srms.api.modules.school.repository.SchoolRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.*;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.EnumSet;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class TermGradeService {
     private static final Set<Assessment.AssessmentType> CA_TYPES = EnumSet.of(
             Assessment.AssessmentType.cat, Assessment.AssessmentType.project,
@@ -31,40 +46,72 @@ public class TermGradeService {
     private final AssessmentRepository assessmentRepository;
     private final ResultRepository resultRepository;
     private final TermGradeRepository termGradeRepository;
+    private final PublishedTermGradeRepository publishedRepository;
     private final GradeWeightConfigService gradeWeightConfigService;
+    private final GradingScaleService gradingScaleService;
+    private final SchoolRepository schoolRepository;
 
     public String resolveClassId(String schoolId, String classIdOrName) {
-        Optional<SchoolClass> byId = schoolClassRepository.findByIdAndSchoolId(classIdOrName, schoolId);
-        if (byId.isPresent()) return byId.get().getId();
-        SchoolClass byName = schoolClassRepository.findBySchoolIdAndName(schoolId, classIdOrName)
-                .orElseThrow(() -> new ResourceNotFoundException("SchoolClass", classIdOrName));
-        return byName.getId();
+        return resolveClass(schoolId, classIdOrName).getId();
     }
 
-    public List<TermGrade> compute(String schoolId, String classIdOrName, String subjectName, String term, String academicYear) {
-        String classId = resolveClassId(schoolId, classIdOrName);
+    private SchoolClass resolveClass(String schoolId, String classIdOrName) {
+        Optional<SchoolClass> byId = schoolClassRepository.findByIdAndSchoolId(classIdOrName, schoolId);
+        if (byId.isPresent()) return byId.get();
+        return schoolClassRepository.findBySchoolIdAndName(schoolId, classIdOrName)
+                .orElseThrow(() -> new ResourceNotFoundException("SchoolClass", classIdOrName));
+    }
+
+    public List<TermGrade> compute(String schoolId, String classIdOrName, String subjectName,
+                                   String term, String academicYear) {
+        return computeInternal(schoolId, classIdOrName, subjectName, term, academicYear, null, false);
+    }
+
+    public List<TermGrade> computeForPublication(String schoolId, String classIdOrName, String subjectName,
+                                                 String term, String academicYear,
+                                                 Assessment.ReportingPeriod period) {
+        return computeInternal(schoolId, classIdOrName, subjectName, term, academicYear, period, true);
+    }
+
+    private List<TermGrade> computeInternal(String schoolId, String classIdOrName, String subjectName,
+                                            String term, String academicYear,
+                                            Assessment.ReportingPeriod period, boolean publicationReadyOnly) {
+        SchoolClass schoolClass = resolveClass(schoolId, classIdOrName);
+        String classId = schoolClass.getId();
         GradeWeightConfig weights = gradeWeightConfigService.get(schoolId);
+        String publicationMode = schoolRepository.findById(schoolId)
+                .map(School::getResultPublicationMode).orElse("SEPARATE");
+        List<GradingBandDto> gradingBands = gradingScaleService.getBands(schoolId);
 
         List<ClassEnrolment> enrolments = classEnrolmentRepository.findByClassIdAndSchoolId(classId, schoolId).stream()
                 .filter(e -> "ACTIVE".equalsIgnoreCase(e.getStatus()))
                 .filter(e -> e.getAcademicYear() == null || e.getAcademicYear().equals(academicYear))
-                .collect(Collectors.toList());
+                .toList();
 
         List<Assessment> assessments = assessmentRepository.findBySchoolIdAndSubjectNameAndTermAndAcademicYear(
-                schoolId, subjectName, term, academicYear);
+                        schoolId, subjectName, term, academicYear).stream()
+                .filter(a -> classMatches(a, schoolClass, classIdOrName))
+                .filter(a -> includedInPeriod(a, period, publicationMode))
+                .filter(a -> !publicationReadyOnly || a.getWorkflowStatus() == Assessment.WorkflowStatus.VERIFIED
+                        || a.getWorkflowStatus() == Assessment.WorkflowStatus.PUBLISHED)
+                .toList();
         Map<String, Assessment> assessmentById = assessments.stream()
-                .collect(Collectors.toMap(Assessment::getId, a -> a));
+                .collect(Collectors.toMap(Assessment::getId, Function.identity()));
 
-        List<String> assessmentIds = new ArrayList<>(assessmentById.keySet());
-        Map<String, List<AssessmentResult>> resultsByStudent = resultRepository.findByAssessmentIdIn(assessmentIds).stream()
+        List<AssessmentResult> allResults = assessmentById.isEmpty()
+                ? List.of()
+                : resultRepository.findByAssessmentIdIn(new ArrayList<>(assessmentById.keySet()));
+        Map<String, List<AssessmentResult>> resultsByStudent = allResults.stream()
                 .collect(Collectors.groupingBy(AssessmentResult::getStudentId));
 
         List<TermGrade> saved = new ArrayList<>();
         for (ClassEnrolment enrolment : enrolments) {
             List<AssessmentResult> studentResults = resultsByStudent.getOrDefault(enrolment.getStudentId(), List.of());
             Double caPercent = categoryPercent(studentResults, assessmentById, CA_TYPES);
-            Double midtermPercent = categoryPercent(studentResults, assessmentById, EnumSet.of(Assessment.AssessmentType.midterm));
-            Double examPercent = categoryPercent(studentResults, assessmentById, EnumSet.of(Assessment.AssessmentType.exam));
+            Double midtermPercent = categoryPercent(studentResults, assessmentById,
+                    EnumSet.of(Assessment.AssessmentType.midterm));
+            Double examPercent = categoryPercent(studentResults, assessmentById,
+                    EnumSet.of(Assessment.AssessmentType.exam));
 
             if (caPercent == null && midtermPercent == null && examPercent == null) continue;
 
@@ -74,10 +121,11 @@ public class TermGradeService {
             if (midtermPercent != null) { weightedSum += midtermPercent * weights.getMidtermWeight(); weightSum += weights.getMidtermWeight(); }
             if (examPercent != null) { weightedSum += examPercent * weights.getExamWeight(); weightSum += weights.getExamWeight(); }
             double weightedTotal = weightSum > 0 ? weightedSum / weightSum : 0;
-            boolean complete = caPercent != null && midtermPercent != null && examPercent != null;
+            GradingBandDto band = gradingScaleService.evaluate(gradingBands, weightedTotal);
 
             TermGrade grade = termGradeRepository
-                    .findBySchoolIdAndStudentIdAndSubjectNameAndTermAndAcademicYear(schoolId, enrolment.getStudentId(), subjectName, term, academicYear)
+                    .findBySchoolIdAndStudentIdAndSubjectNameAndTermAndAcademicYear(
+                            schoolId, enrolment.getStudentId(), subjectName, term, academicYear)
                     .orElse(TermGrade.builder()
                             .schoolId(schoolId).studentId(enrolment.getStudentId())
                             .subjectName(subjectName).term(term).academicYear(academicYear)
@@ -88,23 +136,50 @@ public class TermGradeService {
             grade.setMidtermPercent(midtermPercent);
             grade.setExamPercent(examPercent);
             grade.setWeightedTotal(weightedTotal);
-            grade.setLetterGrade(GradeThresholds.letterGrade(weightedTotal));
-            grade.setComplete(complete);
+            grade.setLetterGrade(band.getGrade());
+            grade.setGradeDescription(band.getDescription());
+            grade.setGradePoints(band.getPoints());
+            grade.setComplete(publicationReadyOnly || (caPercent != null && midtermPercent != null && examPercent != null));
             saved.add(termGradeRepository.save(grade));
         }
         return saved;
     }
 
+    private boolean classMatches(Assessment assessment, SchoolClass schoolClass, String requested) {
+        String stored = assessment.getClassId();
+        return stored != null && (stored.equals(requested) || stored.equals(schoolClass.getId())
+                || stored.equalsIgnoreCase(schoolClass.getName()));
+    }
+
+    private boolean includedInPeriod(Assessment assessment, Assessment.ReportingPeriod period, String publicationMode) {
+        if (period == null) return true;
+        Assessment.ReportingPeriod effective = effectivePeriod(assessment, publicationMode);
+        if (period == Assessment.ReportingPeriod.END_TERM) {
+            return effective == Assessment.ReportingPeriod.MIDTERM || effective == Assessment.ReportingPeriod.END_TERM;
+        }
+        return effective == period;
+    }
+
+    public Assessment.ReportingPeriod effectivePeriod(Assessment assessment, String publicationMode) {
+        if ("COMBINED".equalsIgnoreCase(publicationMode)) return Assessment.ReportingPeriod.COMBINED;
+        if (assessment.getReportingPeriod() == Assessment.ReportingPeriod.MIDTERM
+                || assessment.getReportingPeriod() == Assessment.ReportingPeriod.END_TERM) {
+            return assessment.getReportingPeriod();
+        }
+        return assessment.getType() == Assessment.AssessmentType.midterm
+                ? Assessment.ReportingPeriod.MIDTERM : Assessment.ReportingPeriod.END_TERM;
+    }
+
     private Double categoryPercent(List<AssessmentResult> studentResults, Map<String, Assessment> assessmentById,
-                                    Set<Assessment.AssessmentType> types) {
+                                   Set<Assessment.AssessmentType> types) {
         double weightedSum = 0;
         double weightSum = 0;
         for (AssessmentResult result : studentResults) {
-            if (result.isAbsent()) continue;
             Assessment assessment = assessmentById.get(result.getAssessmentId());
             if (assessment == null || assessment.getType() == null || !types.contains(assessment.getType())) continue;
             if (assessment.getMaxScore() <= 0) continue;
-            double pct = (result.getScore() / assessment.getMaxScore()) * 100;
+            if (!result.isAbsent() && result.getScore() == null) continue;
+            double pct = result.isAbsent() ? 0 : (result.getScore() / assessment.getMaxScore()) * 100;
             double weight = assessment.getWeight() > 0 ? assessment.getWeight() : 1;
             weightedSum += pct * weight;
             weightSum += weight;
@@ -112,11 +187,43 @@ public class TermGradeService {
         return weightSum > 0 ? weightedSum / weightSum : null;
     }
 
-    public TermGrade publish(String id, String schoolId) {
-        TermGrade grade = termGradeRepository.findByIdAndSchoolId(id, schoolId)
-                .orElseThrow(() -> new ResourceNotFoundException("TermGrade", id));
-        grade.setPublished(true);
-        return termGradeRepository.save(grade);
+    public List<PublishedTermGrade> publishSnapshots(String schoolId, String classIdOrName, String term,
+                                                     String academicYear, Assessment.ReportingPeriod period,
+                                                     Set<String> subjects, String publishedBy) {
+        List<PublishedTermGrade> published = new ArrayList<>();
+        for (String subject : subjects) {
+            List<TermGrade> grades = computeForPublication(
+                    schoolId, classIdOrName, subject, term, academicYear, period);
+            for (TermGrade grade : grades) {
+                PublishedTermGrade snapshot = publishedRepository
+                        .findBySchoolIdAndStudentIdAndSubjectNameAndTermAndAcademicYearAndReportingPeriod(
+                                schoolId, grade.getStudentId(), grade.getSubjectName(), term, academicYear, period)
+                        .orElse(PublishedTermGrade.builder()
+                                .schoolId(schoolId).studentId(grade.getStudentId())
+                                .subjectName(grade.getSubjectName()).term(term).academicYear(academicYear)
+                                .reportingPeriod(period).build());
+                snapshot.setStudentName(grade.getStudentName());
+                snapshot.setClassId(grade.getClassId());
+                snapshot.setCaPercent(grade.getCaPercent());
+                snapshot.setMidtermPercent(grade.getMidtermPercent());
+                snapshot.setExamPercent(grade.getExamPercent());
+                snapshot.setWeightedTotal(grade.getWeightedTotal());
+                snapshot.setLetterGrade(grade.getLetterGrade());
+                snapshot.setGradeDescription(grade.getGradeDescription());
+                snapshot.setGradePoints(grade.getGradePoints());
+                snapshot.setPublishedBy(publishedBy);
+                snapshot.setPublishedAt(LocalDateTime.now());
+                published.add(publishedRepository.save(snapshot));
+            }
+        }
+        return published;
+    }
+
+    @Transactional(readOnly = true)
+    public List<PublishedTermGrade> getPublishedHistory(String schoolId, String studentId, String academicYear,
+                                                        Assessment.ReportingPeriod period) {
+        return publishedRepository.findBySchoolIdAndStudentIdAndAcademicYearAndReportingPeriod(
+                schoolId, studentId, academicYear, period);
     }
 
     public List<TermGrade> getHistory(String schoolId, String studentId, String academicYear, boolean includeUnpublished) {
@@ -125,20 +232,38 @@ public class TermGradeService {
                 : termGradeRepository.findBySchoolIdAndStudentIdAndAcademicYearAndPublishedTrue(schoolId, studentId, academicYear);
     }
 
-    public Map<String, Object> getClassStats(String schoolId, String classIdOrName, String subjectName, String term, String academicYear) {
+    @Transactional(readOnly = true)
+    public Map<String, Object> getPublishedClassStats(String schoolId, String classIdOrName, String subjectName,
+                                                      String term, String academicYear,
+                                                      Assessment.ReportingPeriod period) {
         String classId = resolveClassId(schoolId, classIdOrName);
-        List<TermGrade> grades = termGradeRepository.findBySchoolIdAndClassIdAndSubjectNameAndTermAndAcademicYear(
-                schoolId, classId, subjectName, term, academicYear);
+        List<PublishedTermGrade> grades = publishedRepository
+                .findBySchoolIdAndClassIdAndSubjectNameAndTermAndAcademicYearAndReportingPeriod(
+                        schoolId, classId, subjectName, term, academicYear, period);
+        return stats(grades.stream().map(PublishedTermGrade::getWeightedTotal).toList(),
+                grades.stream().map(PublishedTermGrade::getLetterGrade).toList());
+    }
 
+    public Map<String, Object> getClassStats(String schoolId, String classIdOrName, String subjectName,
+                                             String term, String academicYear) {
+        String classId = resolveClassId(schoolId, classIdOrName);
+        List<TermGrade> grades = termGradeRepository
+                .findBySchoolIdAndClassIdAndSubjectNameAndTermAndAcademicYear(
+                        schoolId, classId, subjectName, term, academicYear);
+        return stats(grades.stream().map(TermGrade::getWeightedTotal).toList(),
+                grades.stream().map(TermGrade::getLetterGrade).toList());
+    }
+
+    private Map<String, Object> stats(List<Double> totals, List<String> letters) {
         Map<String, Object> stats = new LinkedHashMap<>();
-        if (grades.isEmpty()) {
+        if (totals.isEmpty()) {
             stats.put("average", null);
             stats.put("distribution", Map.of());
             return stats;
         }
-        double average = grades.stream().mapToDouble(TermGrade::getWeightedTotal).average().orElse(0);
-        Map<String, Long> distribution = grades.stream()
-                .collect(Collectors.groupingBy(TermGrade::getLetterGrade, LinkedHashMap::new, Collectors.counting()));
+        double average = totals.stream().mapToDouble(Double::doubleValue).average().orElse(0);
+        Map<String, Long> distribution = letters.stream()
+                .collect(Collectors.groupingBy(Function.identity(), LinkedHashMap::new, Collectors.counting()));
         stats.put("average", Math.round(average * 10) / 10.0);
         stats.put("distribution", distribution);
         return stats;
